--- a/Index.css
+++ b/Index.css
@@ -70,13 +70,14 @@ p, .cv > li{
     color:#E3E3E3;
 }
 
-img.profile{
+img.profile {
     border: solid white 3px;
-    width:220px;
-    height:230px;
-    border-radius:180px;
-    margin-bottom:15px;
+    width: 220px;
+    height: auto;
+    border-radius: 50%;
+    margin-bottom: 15px;
 }
+
 
 ul{
     list-style-type: square;
@@ -114,14 +115,43 @@ p img {
     font-family: 'Archivo Narrow', sans-serif;
 }
 
-.work,.interests,.extra,.studies,.languages,.achievements{
-    background-color:#474054;
-    width:90%;
-    padding-top:1px;
-    padding-bottom:1px;
+.work,.interests,.extra,.studies,.languages,.achievements,.skills {
+    background-color: #474054;
+    width: 90%;
+    padding: 10px 0;
+    margin: 20px 0;
 }
+
 
 .lower h3, .lower p{
     padding-left:30px;
 }
 
+.section {
+    margin: 20px 30px;
+    padding: 20px;
+    background-color: #2a233a;
+    border-radius: 10px;
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.05);
+}
+
+
+.section h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #FEFEE3;
+}
+
+.section ul {
+    list-style-type: square;
+    padding-left: 30px;
+}
+
+.contacts p img {
+    vertical-align: middle;
+    margin-right: 8px;
+}
+
+.contacts p {
+    line-height: 1.6;
+}
